--- a/lib/edit/Makefile
+++ b/lib/edit/Makefile
@@ -1,8 +1,8 @@
 MKPATH=../../mk/
 include $(MKPATH)buildsys.mk
 
-CONFIG = artifact.txt body.txt ego_item.txt flavor.txt limits.txt monster.txt \
- monster_base.txt names.txt object.txt object_base.txt p_class.txt p_hist.txt \
- p_race.txt spell.txt store.txt terrain.txt vault.txt hints.txt \
+CONFIG = activation.txt artifact.txt body.txt ego_item.txt flavor.txt \
+ limits.txt monster.txt monster_base.txt names.txt object.txt object_base.txt \
+ p_class.txt p_hist.txt p_race.txt store.txt terrain.txt vault.txt hints.txt \
  pain.txt pit.txt room_template.txt trap.txt
 PACKAGE = edit
