Remove read_edit_files() from test-utils
Instead, use monster_bases from unit-test-data. This test now passes, so 100% pass rate :).

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -13,7 +13,7 @@ include $(patsubst %,%/suite.mk,$(SUITES))
 TESTOBJS  := $(patsubst %,%.o,$(TESTPROGS))
 TESTPROGS := $(patsubst %,bin/%,$(TESTPROGS))
 
-TESTOBJS += test-utils.o unit-test.o
+TESTOBJS += unit-test.o
 
 build : $(TESTPROGS)
 
