--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -23,7 +23,7 @@ run : build
 %.o : %.c
 	@$(CC) $(CFLAGS) -c -o $@ $^
 
-bin/% : %.o ../angband.o test-utils.o unit-test.o
+bin/% : %.o ../angband.o unit-test.o
 	@mkdir -p $(shell echo "$$(dirname $@)")
 	@$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) $(LDADD) $(LIBS)
 	@echo "  CC $@"
