Add monster_spell.txt, parse it

--- a/lib/edit/Makefile
+++ b/lib/edit/Makefile
@@ -2,7 +2,7 @@ MKPATH=../../mk/
 include $(MKPATH)buildsys.mk
 
 CONFIG = activation.txt artifact.txt body.txt ego_item.txt flavor.txt \
- limits.txt monster.txt monster_base.txt names.txt object.txt object_base.txt \
- p_class.txt p_hist.txt p_race.txt store.txt terrain.txt vault.txt hints.txt \
- pain.txt pit.txt room_template.txt trap.txt
+ limits.txt monster.txt monster_base.txt monster_spell.txt names.txt \
+ object.txt object_base.txt p_class.txt p_hist.txt p_race.txt store.txt \
+ terrain.txt vault.txt hints.txt pain.txt pit.txt room_template.txt trap.txt
 PACKAGE = edit
